--- a/sdk-haskell.cabal
+++ b/sdk-haskell.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                sdk-haskell
-version:             0.0.2.0
+version:             0.0.3.0
 --synopsis:          
 description:         Payment method liqpay process
 homepage:            https://www.liqpay.com/ru/doc
@@ -13,36 +13,35 @@ maintainer:          support@liqpay.com
 copyright:           Copyright (c) 2014 Liqpay
 category:            Web
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       >=1.16
 
 library
-  build-depends:     base ==4.6.*,
+  build-depends:     base >= 4.7.0,
                      bytestring >= 0.10,
                      SHA,
                      base64-bytestring,
                      containers,
                      text,
-                     HsOpenSSL,
-                     io-streams,
-                     http-streams,
                      xhtml >= 3000.2.1,
                      unordered-containers,
                      exceptions >= 0.6,
-                     transformers >= 0.3,
+                     transformers >= 0.4,
                      monad-control >= 0.3.3,
                      resourcet >= 1.1.2,
                      conduit >= 1.1.2,
                      conduit-extra >= 1.1.0,
                      http-conduit >= 2.1.2,
-                     aeson >= 0.7.0
+                     aeson >= 0.8.0
   hs-source-dirs:    src
   ghc-options:       -Wall -rtsopts -O2
+  default-language:  Haskell2010
 
 test-suite spec
   type:              exitcode-stdio-1.0
   main-is:           Spec.hs
   ghc-options:       -Wall
-  build-depends:     base ==4.6.*,
+  default-language:  Haskell2010
+  build-depends:     base >= 4.7.0,
                      sdk-haskell,
                      hspec >= 1.10,
                      QuickCheck,
@@ -51,28 +50,26 @@ test-suite spec
                      base64-bytestring,
                      containers,
                      text,
-                     HsOpenSSL,
-                     io-streams,
-                     http-streams,
                      xhtml >= 3000.2.1,
                      unordered-containers,
                      exceptions >= 0.6,
-                     transformers >= 0.3,
+                     transformers >= 0.4,
                      monad-control >= 0.3.3,
                      resourcet >= 1.1.2,
                      conduit >= 1.1.2,
                      conduit-extra >= 1.1.0,
                      http-conduit >= 2.1.2,
-                     aeson >= 0.7.0
+                     aeson >= 0.8.0
   hs-source-dirs:    test, src
 
 executable sdk-profiler
   main-is:           Spec.hs
+  default-language:  Haskell2010
   ghc-options:       -O2
                      -threaded
                      -fprof-auto
                      "-with-rtsopts=-N -p -s -h -i0.1"
-  build-depends:     base ==4.6.*,
+  build-depends:     base >= 4.7.0,
                      hspec >= 1.10,
                      QuickCheck,
                      bytestring >= 0.10,
@@ -80,17 +77,14 @@ executable sdk-profiler
                      base64-bytestring,
                      containers,
                      text,
-                     HsOpenSSL,
-                     io-streams,
-                     http-streams >= 0.7.0,
                      xhtml >= 3000.2.1,
                      unordered-containers,
                      exceptions >= 0.6,
-                     transformers >= 0.3,
+                     transformers >= 0.4,
                      monad-control >= 0.3.3,
                      resourcet >= 1.1.2,
                      conduit >= 1.1.2,
                      conduit-extra >= 1.1.0,
                      http-conduit >= 2.1.2,
-                     aeson >= 0.7.0
+                     aeson >= 0.8.0
   hs-source-dirs:    test, src
